--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "consign": "^0.1.2",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
-    "express-load": "^1.1.15"
+    "express-load": "^1.1.15",
+    "method-override": "^2.3.5"
   }
 }
