--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7"
+    "angular": "~1.4.7",
+    "angular-route": "~1.4.8",
+    "bootstrap": "~3.3.5"
   }
 }
